@@ -1,11 +1,11 @@
 {
-  "timestamp" : "2022-05-12T00:51:10Z",
-  "count" : 0,
-  "count_minmax" : [ 0, 0 ],
-  "count_prev_day_inc" : 57,
+  "timestamp" : "2022-05-12T08:11:05Z",
+  "count" : 37,
+  "count_minmax" : [ 0, 37 ],
+  "count_prev_day_inc" : 94,
   "count_prev_day_dec" : 0,
-  "uniques" : 0,
-  "uniques_minmax" : [ 0, 0 ],
-  "uniques_prev_day_inc" : 0,
+  "uniques" : 1,
+  "uniques_minmax" : [ 0, 1 ],
+  "uniques_prev_day_inc" : 1,
   "uniques_prev_day_dec" : 0
 }
