@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-12T00:51:10Z",
+  "timestamp" : "2022-05-12T08:11:05Z",
   "count_outdated" : 8,
   "uniques_outdated" : 2,
-  "count" : 287,
-  "uniques" : 12,
+  "count" : 324,
+  "uniques" : 13,
   "views" : [
     {
       "timestamp": "2022-04-29T00:00:00Z",
@@ -74,6 +74,13 @@
       "count_minmax": [ 3, 60 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-05-12T00:00:00Z",
+      "count": 37,
+      "count_minmax": [ 0, 37 ],
+      "uniques": 1,
+      "uniques_minmax": [ 0, 1 ]
     }
   ]
 }
