@@ -1,5 +1,5 @@
 {
-  "count": 279,
+  "count": 316,
   "uniques": 1,
   "views": [
     {
@@ -50,6 +50,11 @@
     {
       "timestamp": "2022-05-11T00:00:00Z",
       "count": 60,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-12T00:00:00Z",
+      "count": 37,
       "uniques": 1
     }
   ]
